Building a Pure CSS Popup done

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">$297</p>
                   </div>
-                  <a href="#" class="btn btn--white">Book now!</a>
+                  <a href="#popup" class="btn btn--white">Book now!</a>
                 </div>
               </div>
             </div>
@@ -240,7 +240,7 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">$497</p>
                   </div>
-                  <a href="#" class="btn btn--white">Book now!</a>
+                  <a href="#popup" class="btn btn--white">Book now!</a>
                 </div>
               </div>
             </div>
@@ -272,7 +272,7 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">$897</p>
                   </div>
-                  <a href="#" class="btn btn--white">Book now!</a>
+                  <a href="#popup" class="btn btn--white">Book now!</a>
                 </div>
               </div>
             </div>
@@ -464,6 +464,42 @@
         </div>
       </div>
     </footer>
+
+    <div class="popup" id="popup">
+      <div class="popup__content">
+        <div class="popup__left">
+          <img src="img/nat-8-min.jpg" alt="Tour photo" class="popup__img" />
+          <img src="img/nat-9-min.jpg" alt="Tour photo" class="popup__img" />
+        </div>
+        <div class="popup__right">
+          <a href="#section-tours" class="popup__close">&times;</a>
+          <h2 class="heading-secondary u-margin-bottom-small">
+            Start booking now
+          </h2>
+          <h3 class="heading-tertiary u-margin-bottom-small">
+            Important &ndash; Please read these terms before booking
+          </h3>
+          <p class="popup__text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur,
+            expedita commodi, sunt culpa nobis possimus optio provident sequi in
+            nostrum sapiente asperiores molestias ipsum cum, vel fugit
+            perspiciatis quidem adipisci suscipit. Eveniet exercitationem beatae
+            corporis provident repellendus. Voluptatum deleniti sed ipsa facilis
+            aperiam ea provident qui perferendis asperiores atque placeat sit
+            maxime quasi cupiditate est quibusdam dolor rem, at dicta
+            consectetur magni harum blanditiis quos quia. Itaque commodi odio
+            obcaecati repellat officiis, pariatur, impedit ipsam exercitationem
+            repellendus et qui nesciunt? Debitis pariatur esse harum unde
+            cupiditate commodi quos adipisci ea nulla natus deserunt blanditiis
+            et hic, ex laudantium repellat quia recusandae voluptas, vitae
+            obcaecati beatae laboriosam reiciendis sit. Nam blanditiis eaque
+            dolorum accusantium, debitis omnis nihil perspiciatis illum, iste
+            vitae amet exercitationem totam, incidunt officiis veritatis.
+          </p>
+          <a href="#" class="btn btn--green">Book now</a>
+        </div>
+      </div>
+    </div>
     <!--
     <section class="grid-test">
       <div class="row">
