Density and Resolution Switching + challenge

--- a/index.html
+++ b/index.html
@@ -103,6 +103,31 @@
           <div class="col-1-of-2">
             <div class="composition">
               <img
+                srcset="img/nat-1-min.jpg 300w, img/nat-1-large-min.jpg 1000w"
+                sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vw, 300px"
+                alt="Photo 1"
+                class="composition__photo composition__photo--p1"
+                src="img/nat-1-large-min.jpg"
+              />
+
+              <img
+                srcset="img/nat-2-min.jpg 300w, img/nat-2-large-min.jpg 1000w"
+                sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vw, 300px"
+                alt="Photo 2"
+                class="composition__photo composition__photo--p2"
+                src="img/nat-2-large-min.jpg"
+              />
+
+              <img
+                srcset="img/nat-3-min.jpg 300w, img/nat-3-large-min.jpg 1000w"
+                sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vw, 300px"
+                alt="Photo 3"
+                class="composition__photo composition__photo--p3"
+                src="img/nat-3-large-min.jpg"
+              />
+
+              <!--
+              <img
                 src="img/nat-1-large-min.jpg"
                 alt="Photo 1"
                 class="composition__photo composition__photo--p1"
@@ -117,6 +142,7 @@
                 alt="Photo 3"
                 class="composition__photo composition__photo--p3"
               />
+              -->
             </div>
           </div>
         </div>
@@ -424,11 +450,20 @@
 
     <footer class="footer">
       <div class="footer__logo-box">
-        <img
-          src="img/logo-green-2x-min.png"
-          alt="Full logo"
-          class="footer__logo"
-        />
+        <picture class="footer__logo">
+          <source
+            srcset="
+              img/logo-green-small-1x-min.png 1x,
+              img/logo-green-small-2x-min.png 2x
+            "
+            media="(max-width: 37.5em)"
+          />
+          <img
+            srcset="img/logo-green-1x-min.png 1x, img/logo-green-2x-min.png 2x"
+            alt="Full logo"
+            src="img/logo-green-2x-min.png"
+          />
+        </picture>
       </div>
       <div class="row">
         <div class="col-1-of-2">
@@ -470,8 +505,25 @@
     <div class="popup" id="popup">
       <div class="popup__content">
         <div class="popup__left">
-          <img src="img/nat-8-min.jpg" alt="Tour photo" class="popup__img" />
+          <img
+            class="popup__img"
+            srcset="img/nat-8-336p.jpg 340w, img/nat-8-450p.jpg 450w"
+            sizes="(max-width: 900px) 50vw, (min-width: 1800px) 33vw, 300px, 340px"
+            alt="Tour photo"
+            src="img/nat-8-min.jpg"
+          />
+
+          <img
+            class="popup__img"
+            srcset="img/nat-9-336p.jpg 340w, img/nat-9-450p.jpg 450w"
+            sizes="(max-width: 900px) 50vw, (min-width: 1800px) 33vw, 300px, 340px"
+            alt="Tour photo"
+            src="img/nat-9-min.jpg"
+          />
+
+          <!-- <img src="img/nat-8-min.jpg" alt="Tour photo" class="popup__img" />
           <img src="img/nat-9-min.jpg" alt="Tour photo" class="popup__img" />
+          -->
         </div>
         <div class="popup__right">
           <a href="#section-tours" class="popup__close">&times;</a>
