Responsive Images in CSS

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <div class="composition">
               <img
                 srcset="img/nat-1-min.jpg 300w, img/nat-1-large-min.jpg 1000w"
-                sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vw, 300px"
+                sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
                 alt="Photo 1"
                 class="composition__photo composition__photo--p1"
                 src="img/nat-1-large-min.jpg"
@@ -112,7 +112,7 @@
 
               <img
                 srcset="img/nat-2-min.jpg 300w, img/nat-2-large-min.jpg 1000w"
-                sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vw, 300px"
+                sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
                 alt="Photo 2"
                 class="composition__photo composition__photo--p2"
                 src="img/nat-2-large-min.jpg"
@@ -120,7 +120,7 @@
 
               <img
                 srcset="img/nat-3-min.jpg 300w, img/nat-3-large-min.jpg 1000w"
-                sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vw, 300px"
+                sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
                 alt="Photo 3"
                 class="composition__photo composition__photo--p3"
                 src="img/nat-3-large-min.jpg"
@@ -516,7 +516,7 @@
           <img
             class="popup__img"
             srcset="img/nat-9-336p.jpg 340w, img/nat-9-450p.jpg 450w"
-            sizes="(max-width: 900px) 50vw, (min-width: 1800px) 33vw, 300px, 340px"
+            sizes="(max-width: 900px) vw, (min-width: 1800px) 33vw, 300px, 340px"
             alt="Tour photo"
             src="img/nat-9-min.jpg"
           />
