--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <div class="composition">
               <img
                 srcset="img/nat-1-min.jpg 300w, img/nat-1-large-min.jpg 1000w"
-                sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
+                sizes="(min-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
                 alt="Photo 1"
                 class="composition__photo composition__photo--p1"
                 src="img/nat-1-large-min.jpg"
@@ -112,7 +112,7 @@
 
               <img
                 srcset="img/nat-2-min.jpg 300w, img/nat-2-large-min.jpg 1000w"
-                sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
+                sizes="(min-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
                 alt="Photo 2"
                 class="composition__photo composition__photo--p2"
                 src="img/nat-2-large-min.jpg"
@@ -120,7 +120,7 @@
 
               <img
                 srcset="img/nat-3-min.jpg 300w, img/nat-3-large-min.jpg 1000w"
-                sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
+                sizes="(min-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
                 alt="Photo 3"
                 class="composition__photo composition__photo--p3"
                 src="img/nat-3-large-min.jpg"
