--- a/index.html
+++ b/index.html
@@ -28,25 +28,27 @@
       <nav class="navigation__nav">
         <ul class="navigation__list">
           <li class="navigation__item">
-            <a href="#" class="navigation__link"
+            <a href="#about" class="navigation__link"
               ><span>1.</span>About Natours</a
             >
           </li>
           <li class="navigation__item">
-            <a href="#" class="navigation__link"
+            <a href="#features" class="navigation__link"
               ><span>2.</span>Your benefits</a
             >
           </li>
           <li class="navigation__item">
-            <a href="#" class="navigation__link"
+            <a href="#section-tours" class="navigation__link"
               ><span>3.</span>Popular tours</a
             >
           </li>
           <li class="navigation__item">
-            <a href="#" class="navigation__link"><span>4.</span>Stories</a>
+            <a href="#stories" class="navigation__link"
+              ><span>4.</span>Stories</a
+            >
           </li>
           <li class="navigation__item">
-            <a href="#" class="navigation__link"><span>5.</span>Book now</a>
+            <a href="#book" class="navigation__link"><span>5.</span>Book now</a>
           </li>
         </ul>
       </nav>
@@ -70,7 +72,7 @@
     </header>
 
     <main>
-      <section class="section-about">
+      <section class="section-about" id="about">
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">
             Exciting tours for adventurous people
@@ -148,7 +150,7 @@
         </div>
       </section>
 
-      <section class="section-features">
+      <section class="section-features" id="features">
         <div class="row">
           <div class="col-1-of-4">
             <div class="feature-box">
@@ -312,7 +314,7 @@
         </div>
       </section>
 
-      <section class="section-stories">
+      <section class="section-stories" id="stories">
         <div class="bg-video">
           <video class="bg-video__content" autoplay muted loop>
             <source src="img/video-min.mp4" type="video/mp4" />
@@ -380,7 +382,7 @@
         </div>
       </section>
 
-      <section class="section-book">
+      <section class="section-book" id="book">
         <div class="row">
           <div class="book">
             <div class="book__form">
@@ -591,5 +593,6 @@
       </div>
     </section>
     -->
+    <script src="js/script.js"></script>
   </body>
 </html>
